k8s/components/apps/communication/stalwart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stalwart
spec:
  selector:
    app: stalwart
  ports:
    - name: smtp
      port: 25
      targetPort: 25
    - name: submission
      port: 587
      targetPort: 587
    - name: imaps
      port: 993
      targetPort: 993
    - name: http
      port: 8080
      targetPort: 8080
